--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "homepage": "https://pdanin.github.io/ndp-portfolio",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,5 +42,4 @@
   "devDependencies": {
     "gh-pages": "^6.2.0"
   }
-  
 }
