--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
     "react-scripts": "^5.0.1",
+    "react-social-media-embed": "^2.5.17",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
